--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-hacker
 
-title: 1st Annual FayetteFEST
+title: Welcome to FayetteFEST
 description: Hosted by Daddy B Benji, the Chard, AGom, lil' Fresh, & Ai DAN
